# pypsa-eur

./: .flake8  .gitignore  README.md  Snakefile  noxfile.py  pyproject.toml
.nox/data/: eia_hydro_annual_capacity.csv
pypsa_eur/config/: create_scenarios.py
pypsa_eur/doc/: conf.py
pypsa_eur/envs/: linux-pinned.yaml
pypsa_eur/rules/: common.smk
pypsa_eur/scripts/: _helpers.py  add_brownfield.py  add_electricity.py  add_existing_baseyear.py  add_transmission_projects_and_dlr.py  base_network.py  build_ammonia_production.py  build_biomass_potentials.py  build_biomass_transport_costs.py  build_clustered_population_layouts.py  build_cross_border_flows.py  build_cutout.py  build_daily_heat_demand.py  build_direct_heat_source_utilisation_profiles.py  build_district_heat_share.py  build_egs_potentials.py  build_electricity_demand.py  build_electricity_demand_base.py  build_electricity_prices.py  build_electricity_production.py  build_energy_totals.py  build_existing_heating_distribution.py  build_gas_input_locations.py  build_gas_network.py  build_gdp_pop_non_nuts3.py  build_hac_features.py  build_heat_totals.py  build_hourly_heat_demand.py  build_hydro_profile.py  build_industrial_distribution_key.py  build_industrial_energy_demand_per_country_today.py  build_industrial_energy_demand_per_node.py  build_industrial_energy_demand_per_node_today.py  build_industrial_production_per_country.py  build_industrial_production_per_country_tomorrow.py  build_industrial_production_per_node.py  build_industry_sector_ratios.py  (+53 more)
test/: test_base_network.py  test_build_powerplants.py
(+3 files in other folders)
